add_subdirectory(${SOURCE_DIR}/structure_algorithms/basis)
add_subdirectory(${SOURCE_DIR}/structure_algorithms/program_performance)
add_subdirectory(${SOURCE_DIR}/structure_algorithms/linked_list)
add_subdirectory(${SOURCE_DIR}/structure_algorithms/matrix)
add_subdirectory(${SOURCE_DIR}/structure_algorithms/stack)
add_subdirectory(${SOURCE_DIR}/structure_algorithms/queue)
add_subdirectory(${SOURCE_DIR}/structure_algorithms/dictionary)
add_subdirectory(${SOURCE_DIR}/structure_algorithms/binary_tree)
