add_executable(copying_elements copying_elements_test.cc)
add_executable(moving_elements moving_elements_test.cc)
add_executable(transforming_combining_elements transforming_combining_elements_test.cc)
add_executable(swapping_elements swapping_elements_test.cc)
add_executable(assigning_new_value assigning_new_value.cc)
add_executable(assigning_generated_value assigning_generated_value.cc)
add_executable(assigning_sequence_increment_value assigning_sequence_increment_values.cc)
add_executable(replacing_elements replacing_element.cc)
add_executable(copying_replacing_elements copying_replacing_elements.cc)
