add_executable(elements_cout elements_count.cc)
add_executable(min_max_element min_max_element.cc)
add_executable(searching_element searching_element.cc)
add_executable(searching_element2 searching_element2.cc)
add_executable(search_first_subrange search_first_subrange.cc)
add_executable(search_last_subrange search_last_subrange.cc)
add_executable(search_adjacent search_adjacent.cc)
add_executable(equality equality_test.cc)
add_executable(unordered_equality unordered_equality_test.cc)
add_executable(search_first_difference search_first_difference.cc)
add_executable(is_sorted is_sorted_test.cc)
add_executable(is_partitioned is_partitioned_test.cc)
add_executable(is_heap is_heap_test.cc)
add_executable(all_any_none all_any_none_test.cc)
